Fix spacing

--- a/squads/squads.css
+++ b/squads/squads.css
@@ -7,4 +7,5 @@ img {
 .tier-title {
 	font-weight: bold;
 	font-size: 22px;
+	margin-top: 30px;
 }
